name:                declarative-anneal
version:             0.1.0.0
synopsis:            An annealing transformer for Markov transition operators.
homepage:            http://github.com/jtobin/declarative-anneal
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Math
build-type:          Simple
cabal-version:       >=1.10
description:
  An annealing transformer for Markov transition operators.

library
  default-language:  Haskell2010
  hs-source-dirs:    lib
  exposed-modules:
    Numeric.MCMC.Anneal
  build-depends:
      base              <  5
    , mcmc-types        >= 1.0.1
    , primitive
    , transformers

Test-suite himmelblau
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:
    -rtsopts
  build-depends:
      base               < 5
    , declarative-anneal
    , mighty-metropolis

